# crates/goose-server/src/openapi.rs
@@ -445,6 +445,9 @@ derive_utoipa!(IconTheme as IconThemeSchema);
         super::routes::session::import_session,
         super::routes::session::share_session_nostr,
         super::routes::session::import_session_nostr,
+        super::routes::session::get_channel_info,
+        super::routes::session::send_suggestion,
+        super::routes::session::get_suggestions,
         super::routes::session::update_session_user_recipe_values,
         super::routes::session::fork_session,
         super::routes::session::get_session_extensions,
@@ -517,6 +520,9 @@ derive_utoipa!(IconTheme as IconThemeSchema);
         super::routes::session::ShareSessionNostrRequest,
         super::routes::session::ShareSessionNostrResponse,
         super::routes::session::ImportSessionNostrRequest,
+        super::routes::session::ChannelSuggestRequest,
+        super::routes::session::ChannelInfoResponse,
+        super::routes::session::SuggestionResponse,
         super::routes::session::SessionListResponse,
         super::routes::session::UpdateSessionNameRequest,
         super::routes::session::UpdateSessionUserRecipeValuesRequest,
